# 100-days-Data-Sports-Challenge

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  implementation_plan.md  pyproject.toml  update_readme_badge.py
.github/workflows/: update_badge.yml
api/app/: main.py
apps/: scouting_dashboard.py
docs/: _config.yml  about.md  index.html  index.md  journal.md  projects.md  resources.md  roadmap.md
docs/_data/: progress.yml
docs/_layouts/: default.html  project.html
notebooks/phase1_foundations/: 01_statsbomb_exploration.ipynb  02_nfl_data_exploration.ipynb  03_data_quality_football.ipynb  04_data_quality_nfl.ipynb  05_tracking_data_intro.ipynb  day001_arquitectura_del_repo.ipynb  day001_repo_architecture.ipynb  day002_github_pages_setup.ipynb  day003_progress_tracker.ipynb  day003_tracker_de_progreso.ipynb  day004_statsbomb_open_data.ipynb  day005_nflverse_data.ipynb  day006_fbref_scraper.ipynb  day007_ingestion_pipeline.ipynb  day007_pipeline_de_ingesti_n.ipynb  day008_data_quality_f_tbol.ipynb  day008_football_data_quality.ipynb  day009_data_quality_nfl.ipynb  day009_nfl_data_quality.ipynb  day010_football_schema.ipynb  day010_schema_f_tbol.ipynb  day011_nfl_schema.ipynb  day011_schema_nfl.ipynb  day012_tracking_data_intro.ipynb  day013_librer_a_de_visualizaci_n.ipynb  day013_visualization_library.ipynb  day014_publicar_fase_1.ipynb  day014_publish_phase_1.ipynb  day015_phase_1_retrospective.ipynb  day015_retrospectiva_f1.ipynb
notebooks/phase2_eda_features/: 06_shot_analysis_eda.ipynb  07_passing_network_eda.ipynb  08_nfl_offensive_eda.ipynb  09_per90_and_radar_charts.ipynb  10_pressing_analysis.ipynb  11_nfl_situational_analysis.ipynb  12_player_heatmaps.ipynb  13_player_clustering.ipynb  14_nfl_draft_combine_eda.ipynb  15_possession_territory_analysis.ipynb  16_formation_analysis.ipynb  day016_shot_analysis_eda.ipynb  day017_xg_features_part_1.ipynb  day017_xg_features_parte_1.ipynb  day018_xg_features_geom_tricas.ipynb  day018_xg_geometrical_features.ipynb  day019_passing_networks.ipynb  day020_nfl_offensive_eda.ipynb  day021_nfl_player_features.ipynb  day022_rolling_features.ipynb  day023_per_90_and_radar_charts.ipynb  day023_per_90_y_radar_charts.ipynb  day024_pressing_analysis.ipynb  day025_nfl_situational_analysis.ipynb  day026_player_heatmaps_kde.ipynb  day027_player_clustering.ipynb  day028_player_similarity_engine.ipynb  day029_project_1_readme.ipynb  day029_proyecto_1_readme.ipynb  day030_nfl_draft_combine_eda.ipynb  day031_draft_features.ipynb  day032_possession_analysis.ipynb  day033_formation_analysis.ipynb  day034_journal_post_fase_2.ipynb  day034_journal_post_phase_2.ipynb  day035_phase_2_retrospective.ipynb  day035_retrospectiva_f2.ipynb
notebooks/phase3_modeling/: 17_xg_model_baseline.ipynb  18_xg_model_boosting.ipynb  19_xg_calibration.ipynb  (+49 more)
scratch/: update_nb_day2.py
src/: __init__.py
src/models/: elo.py  (+4 more)
tests/: test_loaders.py  test_smoke.py
(+84 files in other folders)
