[project]
name = "sports-analytics-100days"
version = "0.1.0"
description = "100 Days of Data & Sports Challenge — ML Engineer | Data Scientist specializing in Sports Analytics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "David Bazaldua" },
]

keywords = [
    "sports-analytics",
    "machine-learning",
    "football",
    "nfl",
    "data-science",
    "expected-goals",
    "win-probability",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # ── Core Data ──
    "pandas>=2.2,<3",
    "polars>=1.0,<2",
    "numpy>=1.26,<2",
    "pyarrow>=15.0",

    # ── Visualization ──
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "mplsoccer>=1.3,<2",
    "plotly>=5.18,<6",

    # ── Machine Learning ──
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.3,<5",
    "optuna>=3.5,<4",
    "shap>=0.45,<1",

    # ── Sports Data ──
    "statsbombpy>=1.13,<2",
    "nfl-data-py>=0.3",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.1",

    # ── Experiment Tracking ──
    "mlflow>=2.11,<3",

    # ── Data Quality ──
    "ydata-profiling>=4.6,<5",

    # ── Bayesian ──
    "scipy>=1.12,<2",

    # ── Utilities ──
    "tqdm>=4.66,<5",
    "python-dotenv>=1.0,<2",
    "joblib>=1.3,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.6,<3",
]
dashboard = [
    "streamlit>=1.32,<2",
]
dev = [
    "ruff>=0.3,<1",
    "black>=24.2,<25",
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<5",
    "pre-commit>=3.6,<4",
    "nbstripout>=0.7,<1",
    "mypy>=1.8,<2",
]
all = [
    "sports-analytics-100days[api,dashboard,dev]",
]

[project.urls]
Homepage = "https://github.com/david-bazaldua/100-days-Data-Sports-Challenge"
Documentation = "https://david-bazaldua.github.io/100-days-Data-Sports-Challenge"
Repository = "https://github.com/david-bazaldua/100-days-Data-Sports-Challenge"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Ruff (Linting) ──
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Black (Formatting) ──
[tool.black]
target-version = ["py311"]
line-length = 100

# ── Pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

# ── MyPy ──
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
